<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF9C4"
    tools:context="com.example.pedrito.delivery_pizza.Delivery.Cardapio">


    <TextView
        android:id="@+id/textRefri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refri1"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:layout_below="@+id/idBebida"
        android:layout_alignStart="@+id/TextValores"
        android:layout_marginTop="46dp" />

    <EditText
        android:id="@+id/qtdRefri"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/shape3"
        android:ems="10"
        android:hint="@string/x2"
        android:inputType="number"
        android:maxLines="1"
        android:paddingBottom="5px"
        android:paddingEnd="5px"
        android:paddingLeft="10px"
        android:paddingRight="5px"
        android:paddingStart="10px"
        android:paddingTop="5px"
        android:selectAllOnFocus="false"
        android:text="1"
        android:textColor="@color/error_color"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded"
        android:layout_below="@+id/TextValores"
        android:layout_toEndOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/qtdRefri"
        android:layout_alignBottom="@+id/qtdRefri"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp"
        android:text="@string/quantidade"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonProsseguir2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:text="@string/prosseguir"
        android:textColor="@android:color/background_light"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="63dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/idBebida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:fontFamily="cursive"
        android:text="@string/bebidas"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r_0_00"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:layout_below="@+id/textRefri"
        android:layout_alignStart="@+id/qtdRefri"
        android:layout_marginTop="42dp" />

    <TextView
        android:id="@+id/TextValores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_alignTop="@+id/textValor"
        android:text="Valor :"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView57"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SubTotal :"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:id="@+id/textView58"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-------------"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:layout_above="@+id/subTotalRefri"
        android:layout_alignStart="@+id/subTotalRefri" />

    <TextView
        android:id="@+id/subTotalRefri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView57"
        android:layout_alignStart="@+id/textValor"
        android:text="R$0,00"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />

    <Button
        android:id="@+id/adicionarQtd"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape"
        android:text="Adicionar Quantidade"
        android:textColor="@android:color/background_light"
        android:layout_below="@+id/subTotalRefri"
        android:layout_alignStart="@+id/buttonProsseguir2" />

</RelativeLayout>
